--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,11 +1,13 @@
+{% set version = "1.3.0" %}
+
 package:
     name: affine
-    version: 1.2.0
+    version: {{ version }}
 
 source:
-    fn: affine-1.2.0.tar.gz
-    url: https://pypi.python.org/packages/source/a/affine/affine-1.2.0.tar.gz
-    md5: 8167ffb06ecc2da4d44c7f3ed8f3b504
+    fn: affine-{{ version }}.tar.gz
+    url: https://pypi.python.org/packages/source/a/affine/affine-{{ version }}.tar.gz
+    md5: a8e4dec94d91731952092fd0adbf0611
 
 build:
     number: 0
