--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,13 @@ about:
   home: https://github.com/sgillies/affine
   license: BSD 3-Clause
   summary: 'Matrices describing affine transformation of the plane.'
+  license_family: BSD
+  license_file: LICENSE.txt
+  description: |
+    The Affine package is used to produce the affine transformation
+    matrix.
+  doc_source_url: https://github.com/sgillies/affine/blob/master/README.rst
+  dev_url: https://github.com/sgillies/affine
 
 extra:
   recipe-maintainers:
