--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,18 +11,22 @@ source:
 build:
   number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
   run:
-    - python
+    - python >=3.6
 
 test:
   imports:
     - affine
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: https://github.com/sgillies/affine
