--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,7 @@ test:
     - python {{ python_min }}
 
 about:
+  home: https://github.com/rasterio/affine/blob/main/README.rst
   summary: Matrices describing affine transformation of the plane
   dev_url: https://github.com/rasterio/affine
   license: BSD-3-Clause
@@ -40,7 +41,6 @@ about:
   description: |
     The Affine package is used to produce the affine transformation
     matrix.
-  doc_source_url: https://github.com/rasterio/affine/blob/main/README.rst
 
 extra:
   recipe-maintainers:
