--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,7 +40,7 @@ about:
   description: |
     The Affine package is used to produce the affine transformation
     matrix.
-  doc_source_url: https://github.com/rasterio/affine/blob/main/README.rst
+  doc_url: https://affine.readthedocs.io/
   dev_url: https://github.com/rasterio/affine
 
 extra:
